[gd_scene load_steps=5 format=2]

[ext_resource path="res://characters/player/camera/player_camera.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]
resource_local_to_scene = true
extents = Vector2( 192, 4 )

[sub_resource type="RectangleShape2D" id=2]
resource_local_to_scene = true
extents = Vector2( 4, 120 )

[sub_resource type="RectangleShape2D" id=3]
resource_local_to_scene = true
extents = Vector2( 4, 120 )

[node name="PlayerCamera" type="Camera2D"]
pause_mode = 2
current = true
process_mode = 0
limit_left = -1000000
limit_top = -1000000
limit_right = 1000000
limit_bottom = 1000000
drag_margin_left = 0.05
drag_margin_top = 1.0
drag_margin_right = 0.05
drag_margin_bottom = 1.0
script = ExtResource( 1 )

[node name="MultiplayerBoundaries" type="StaticBody2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShapeTop" type="CollisionShape2D" parent="MultiplayerBoundaries"]
position = Vector2( 0, -128 )
shape = SubResource( 1 )

[node name="CollisionShapeLeft" type="CollisionShape2D" parent="MultiplayerBoundaries"]
position = Vector2( -200, 0 )
shape = SubResource( 2 )

[node name="CollisionShapeRight" type="CollisionShape2D" parent="MultiplayerBoundaries"]
position = Vector2( 200, 0 )
shape = SubResource( 3 )
